K8s-Resources/webapp-ingress-get-using-ALB.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-class
  rules:
    - host: myapp.webapp.com
      http:
        paths:
          - path: /get
            pathType: Prefix
            backend:
              service:
                name: sample-app-service
                port:
                  number: 443  
  tls:
  - hosts:
    - myapp.webapp.com
    secretName: myapp-tls-secret
