K8s-Resources/webapp-ingress-post-using-NginxIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.webapp.com
      http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: sample-app-service
                port:
                  number: 443  
  tls:
  - hosts:
    - myapp.webapp.com
    secretName: myapp-tls-secret
